Fix form alignment

--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -3,6 +3,10 @@ form.form-inline {
   .form-group,
   .input-group {
     width: 100%;
+
+    .input-group-btn {
+      width: 1%;
+    }
   }
 }
 
